# serp-analyzer

./: .env.example  .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 2b6f0a8c8d51_add_tracked_sites_hits.py  3c1a2d7b8a90_add_scheduler_status.py  4c2e9a7b1f6d_add_redirect_events.py  5a1b6c1d2c3e_add_tracked_hit_position_url.py  5c6c010cb60c_init.py  7a2d1c3b0b2a_add_keyword_language.py  8f6e1b2c7d9a_add_canonical_tracking.py  9f7f2f1c1a10_add_keyword_schedules.py
configs/: keywords.json  keywords.yaml  proxies.json  proxies.yaml  watch_urls.json  watch_urls.yaml
src/serp_monitor/: __init__.py
src/serp_monitor/cli/: export_csv.py  hourly_run.py  scheduler_run.py  serp_ui.py  serper_query.py
src/serp_monitor/config/: loaders.py  settings.py
src/serp_monitor/db/: session.py
src/serp_monitor/db/models/: __init__.py  canonical_edge.py  canonical_favorite.py  canonical_site.py  keyword.py  keyword_schedule.py  page_tag.py  redirect_event.py  run.py  scheduler_status.py  serp_result.py  tracked_hit.py  tracked_site.py  watch_url.py
src/serp_monitor/parsers/: page_tags.py  serper.py
src/serp_monitor/providers/: __init__.py  serper.py
src/serp_monitor/services/: serp_service.py  tag_service.py
src/serp_monitor/ui/: app.py
src/serp_monitor/utils/: urls.py
src/serp_monitor/worker/: __init__.py  scheduler.py
