[project]
name = "serp-analyzer"
version = "0.1.0"
description = "MVP service for hourly Google SERP and SEO tag monitoring"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]

dependencies = [
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "apscheduler>=3.10",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "pyyaml>=6.0",
  "tenacity>=8.3",
  "python-dotenv>=1.0",
  "rich>=13.7"
]

[project.scripts]
hourly-run = "serp_monitor.cli.hourly_run:main"
export-csv = "serp_monitor.cli.export_csv:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
